--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     ]
   },
   "devDependencies": {
-    "@types/reach__router": "^1.3.5"
+    "@types/reach__router": "^1.3.5",
+    "chai": "^4.2.0",
+    "sinon": "^9.2.1"
   }
 }
