--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@types/reach__router": "^1.3.5",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "sinon": "^9.2.1"
   }
 }
